Tue Dec  3 18:58:40 1996  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_dependencies): Skip C-only lines in
	depend2.am when appropriate.
	* depend2.am (.deps/%.P): Omit modification of $o if language is
	not C.

Tue Dec  3 11:29:01 1996  Gordon Matzigkeit  <gord@gnu.ai.mit.edu>

	* compile-kr.am: Quote arguments to echo.

	* progs.am: Fix up problems when LIBTOOL is not defined (by
 	setting shell variable instprog to the installation program).

	* aclocal.in (scan_file): Allow the acinclude.m4 file to override
	any other macro files (but still prevent multiple definitions
	within acinclude.m4).

Tue Dec  3 10:40:48 1996  Tom Tromey  <tromey@cygnus.com>

	From Ulrich Drepper:
	* automake.in (handle_emacs_lisp): Typo fix.
	(scan_configure): Only recognize VERSION after whitespace.

	* texinfos.am: install-info requires path to info file.

	* progs.am: Use @LIBTOOL@, not $(LIBTOOL).

	* automake.in (am_install_var): If -ltlibs passed, substitute
	@LIBTOOL@.

Mon Dec  2 13:51:11 1996  Gordon Matzigkeit  <gord@gnu.ai.mit.edu>

	* automake.in (get_object_extension): Unshift ansi2knr onto the
 	all target, so that it builds before any other targets.
	[de_ansi_objects]: Delete, since unshifting ansi2knr is an easier
	solution.

Mon Dec  2 12:13:27 1996  Tom Tromey  <tromey@cygnus.com>

	* Released 1.1i.

	From Janos Farkas:
	* automake.in (handle_texinfo): Must quote $ for make.

Sun Dec  1 15:08:09 1996  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_configure): Correctly handle common case of
	multiple non-Makefiles in AC_OUTPUT.  Require all input files when
	using ":" syntax.

Sun Nov 24 00:33:50 1996  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_source_transform): Don't define
	EXTRA_prog_SOURCES unnecessarily.  Test extra2.test.

	* automake.in (initialize_per_input): New variables
	included_generic_compile, included_knr_compile,
	included_libtool_compile.
	(get_object_extension): Use them.
