@@ -392,6 +392,8 @@ document that dependencies:
 * are put into .deps
 * are system-dependent
 
+clean-local rules
+
 ================================================================
 
 Things to do for autoconf:
