@@ -2861,10 +2861,17 @@ sub do_one_clean_target
     {
 	if ($last_name || $name ne 'mostly')
 	{
-	    push (@deps, $last_name . $target . " ");
+	    push (@deps, $last_name . $target);
 	}
     }
-    # FIXME: not sure if I like the tabs here.
+
+    # If a -local version of the rule is given, add it to the list.
+    if (defined $contents{$name . $target . '-local'})
+    {
+	push (@deps, $name . $target . '-local');
+    }
+
+    # Print the target and the dependencies.
     &pretty_print_rule ($name . $target . ": ", "\t\t", @deps);
 
     # FIXME: shouldn't we really print these messages before running
