@@ -1,3 +1,7 @@
+Wed Dec  4 00:41:44 1996  Tom Tromey  <tromey@cygnus.com>
+
+	* Makefile.am (distclean-local): New target.
+
 Tue Dec  3 11:55:18 1996  Gordon Matzigkeit  <gord@gnu.ai.mit.edu>
 
 	* dup.test, dup2.test: Modified, now that aclocal allows
