@@ -1,3 +1,8 @@
+Wed Dec  4 00:41:23 1996  Tom Tromey  <tromey@cygnus.com>
+
+	* automake.in (do_one_clean_target): Allow -local version of clean
+	targets.
+
 Tue Dec  3 18:58:40 1996  Tom Tromey  <tromey@cygnus.com>
 
 	* automake.in (handle_dependencies): Skip C-only lines in
